@@ -19,7 +19,7 @@ AC_CONFIG_HEADER([config.h])
 GWENHYWFAR_VERSION_MAJOR=1
 GWENHYWFAR_VERSION_MINOR=3
 GWENHYWFAR_VERSION_PATCHLEVEL=0
-GWENHYWFAR_VERSION_BUILD=3
+GWENHYWFAR_VERSION_BUILD=5
 dnl "stable", "rcX", "betaX", "cvs"
 GWENHYWFAR_VERSION_TAG="cvs"
 GWENHYWFAR_VERSION_FULL_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$GWENHYWFAR_VERSION_PATCHLEVEL.$GWENHYWFAR_VERSION_BUILD${GWENHYWFAR_VERSION_TAG}"
@@ -597,6 +597,8 @@ AC_CONFIG_FILES([Doxyfile po/Makefile.in
                  plugins/dbio/Makefile
                  plugins/dbio/csv/Makefile
                  plugins/dbio/csv/csv.xml
+                 plugins/dbio/olddb/Makefile
+                 plugins/dbio/olddb/olddb.xml
                  tools/Makefile
                  tools/xmlmerge/Makefile
                  tools/dlgtest/Makefile
