@@ -1,0 +1,10 @@
+<plugin name="csv" type="dbio" >
+  <version>@GWENHYWFAR_VERSION_STRING@</version>
+  <author>Martin Preuss(martin@libchipcard.de)</author>
+  <short>Exporter for CSV</short>
+  <descr>
+    This plugin exports data to a CSV file according to a given configuration.
+  </descr>
+</plugin>
+
+
